[package]
name = "async_tasklist_executor"
version = "0.1.0"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0" , features=["tokio1"] }
log = "0.4.14"
env_logger = "0.8.3"
csv-async = "1.2.1"
clap = "2.33.3"
futures = "0.3.14"
chrono = "0.4.19"
ctrlc = "3.1.9"
reqwest = "0.11"

[[bin]]
name = "batch"

